--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "A basic boilerplate for React and Node",
   "scripts": {
-    "prestart": "npm run start:pm2",
-    "start:pm2": "./node_modules/.bin/pm2 startOrReload src/server/ecosystem.json",
+    "prestart": "cross-env NODE_ENV=dev npm run start:pm2",
+    "start:pm2": "./node_modules/.bin/pm2 startOrRestart src/server/ecosystem.json",
     "start": "cross-env NODE_ENV=dev webpack-dev-server --open",
     "prebuild": "./node_modules/.bin/pm2 stop src/server/ecosystem.json",
     "build": "webpack -p --progress --colors",
-    "serve": "./node_modules/.bin/pm2 startOrReload src/server/ecosystem.json && npm run logs",
-    "serve:docker": "./node_modules/.bin/pm2 startOrReload server/docker-ecosystem.json && npm run logs",
+    "serve": "./node_modules/.bin/pm2 startOrRestart src/server/ecosystem.json && npm run logs",
+    "serve:docker": "./node_modules/.bin/pm2 startOrRestart server/docker-ecosystem.json && npm run logs",
     "logs": "./node_modules/.bin/pm2 logs",
     "lint:client": "eslint --ext .js --ext .jsx ./src/client/",
     "lint:test": "eslint --ext .js --ext .jsx ./test/unit/",
