--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "pretest": "rimraf coverage && npm run lint",
     "test": "cross-env NODE_ENV=test NODE_PATH=./src/client nyc --reporter=html --reporter=text mocha",
     "test:watch": "npm run test; chokidar './src/client/**/*.{js,jsx}' './test/unit/**/*.{js,jsx}' -c 'npm run test'",
-    "selenium": "selenium-standalone install --config=./selenium.config.js",
-    "pretest:feature": "rimraf reports/* & rimraf logs/selenium-debug.log && npm run selenium",
-    "test:feature": "nightwatch",
-    "posttest:feature": "node html-cucumber-reports.js",
-    "pm2:update": "./node_modules/.bin/pm2 update"
+    "pm2:update": "./node_modules/.bin/pm2 update",
+    "pm2:kill": "./node_modules/.bin/pm2 kill"
   },
   "repository": {
     "type": "git",
@@ -44,6 +41,8 @@
     "winston": "^2.4.0"
   },
   "devDependencies": {
+    "@material-ui/core": "^1.5.1",
+    "@material-ui/icons": "^2.0.3",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -83,6 +82,8 @@
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0",
     "react-redux": "^5.0.5",
